# meet-api

./: .gitignore  Makefile  README.md  pyproject.toml
alembic/versions/: 054c1ecc3a1a_.py  212ea4c9f7f0_.py  4043fd2c4115_add_deletion_scheduled_at_field_to_user_.py  65e9b07345b7_initial_postgresql_schema_with_user_and_.py  74937651b33f_.py  886edcb54500_update_meeting_status_enum_to_new_.py  9c35ea001e95_add_deletion_scheduled_at_field.py  adf57da972b5_update_meeting_status_enum_values.py  b6bcba1eb2c0_.py  b88afb1acb0e_convert_meeting_type_to_table.py  c52e18da0bd8_initial.py  c74db799c2dd_.py  c9aa55eef28d_add_follows_table.py  ccaff8878f75_ensure_is_active_defaults_to_true.py  dd22a682acf0_.py  e163c0702d03_ensure_meeting_status_auto_update_.py  f48f50735b89_add_meetings_and_participants_tables.py  ffc2f6fcc8bd_fix_models.py
app/: main.py
app/routes/: agent.py  auth.py  calendar.py  follow.py  health.py  meeting.py  user.py
app/services/agent/: agent_service.py
app/services/calendar/: calendar_repository.py  calendar_service.py
app/services/follow/: follow_repository.py  follow_service.py
app/services/meeting/: __init__.py  meeting_repository.py  meeting_service.py
app/services/user/: user_repository.py  user_service.py
app/utils/: config.py  delegate.py  exceptions.py  models.py  redisdb.py  security.py  sqldb.py
zarf/compose/: docker_compose.yaml  haproxy.cfg  pg_hba.conf
zarf/docker/: dockerfile.api
